# awslegalpoc

./: .bedrock_agentcore.yaml  .env.example  .gitignore  CICD_DESIGN.md  DEPLOYMENT.md  Dockerfile  HLD.md  Instructions.md  LANGFUSE_INTEGRATION.md  README.md  RUNBOOK.md  SOP.md  USER_FEEDBACK_IMPLEMENTATION.md  deployment.md  eval_guide.md  judge.md  piepline_test.md  pyproject.toml
agentcore/: __init__.py  requirements.txt  runtime_app.py
app/: main.py
config/: environments.json  secrets.example.json
core/: agent.py  agentcore_runtime_client.py  cognito_auth.py  config.py  langfuse_client.py  observability.py  tools.py
infra/: agentcore_stack.py  app.py  app_stack.py  cdk.context.json  cdk.json  ecr_stack.py  knowledge_base_stack.py  requirements.txt
notebooks/: invoke_agentcore_runtime.ipynb
scripts/: agentcore_deploy.py  bootstrap_cognito.py  bootstrap_cognito.sh  build.sh  deploy-all.sh  deploy.sh  destroy.sh  invoke_agentcore_runtime_simple.py  lab01_02_03_06_notebooks.py  lab04_runtime_notebook.py  push.sh  run_eval.py  run_local.sh  seed_langfuse_dataset.py  seed_langfuse_prompt.py  seed_memory.py  seed_warranty_data.py  test_agentcore_runtime.py  test_chat.py
